tests/markups/fail-28.expected
ERROR: 'triple' is not a valid value for the 'overline' attribute on <span> tag, line 1; valid values are none/single/double/dashed/dotted/wavy